Routing Halaman Search

--- a/templates/search.html
+++ b/templates/search.html
@@ -98,7 +98,7 @@
             document.getElementById('search-form').addEventListener('submit', function (event) {
                 event.preventDefault();
                 var query = document.getElementById('input-box').value.toLowerCase();
-                window.location.href = query.replace(/\s+/g, '-').toLowerCase() + '.html';
+                window.location.href = query.replace(/\s+/g, '-').toLowerCase();
             });
             
             function displayResults(results) {
