--- a/static/css/style.css
+++ b/static/css/style.css
@@ -191,7 +191,7 @@ header .navbar .icon .material-symbols-outlined:hover{
 
 /* ini batas awal result box home section */
 .home .content .sb-container .result-box{
-    max-height: 85px;
+    max-height: 100%;
     overflow-y: scroll;
 }
 
@@ -293,41 +293,29 @@ header .navbar .icon .material-symbols-outlined:hover{
 .search .sb-container .result-box ul li:hover{
     background: #E6E6FA;
 }
-
-.search .sb-container .result-box ul li a{
-    background: transparent;
-}
 /* ini batas akhir search section */
 
+
+
+/* ini batas awal scrollbar */
 ::-webkit-scrollbar {
     width: 10px;
     height: 10px; /* Width of the scrollbar */
-  }
+}
   
-  ::-webkit-scrollbar-track {
+::-webkit-scrollbar-track {
     background-color: var(--main-color); /* Color of the scrollbar track */
-  }
+}
   
-  ::-webkit-scrollbar-thumb {
+::-webkit-scrollbar-thumb {
     background-color: var(--blue); /* Color of the scrollbar handle */
     border-radius: 6px; /* Rounded corners for the scrollbar handle */
     border: 1px solid #f1f1f1; /* Border around the scrollbar handle */
-  }
+}
   
-  ::-webkit-scrollbar-thumb:hover {
+::-webkit-scrollbar-thumb:hover {
     background-color: #f1f1f1; /* Color of the scrollbar handle */
     border-radius: 6px; /* Rounded corners for the scrollbar handle */
     border: 2px solid var(--blue); /* Color of the scrollbar handle on hover */
-  }
-
-/* ini batas awal pengaturan halaman responsif */
-@media (max-width:700px){
-    
 }
-
-@media (max-width:500px){
-    *{
-        font-size: 50%;
-    }
-}
-/* ini batas akhir pengaturan halaman responsif */
+/* ini batas akhir scrollbar */
