--- a/templates/home.html
+++ b/templates/home.html
@@ -11,7 +11,7 @@
             </h1>
 
             <p>Want to know more about what qualification need by the industry?
-                Seareq is the perfect platform for you to enhance your skill
+                SEAREQ is the perfect platform for you to enhance your skill
                 based on the needs of the industry!
             </p>
 
