fix wrong conflict resolve

--- a/templates/search.html
+++ b/templates/search.html
@@ -20,7 +20,7 @@
                     <input type="text" id="input-box" placeholder="What is your major" autocomplete="off"  name="getByQuery">
                 </div>
 
-                <button>
+                <button type="reset">
                   <span class="material-symbols-outlined">close</span>
                 </button>
             </form>
