--- a/templates/output.html
+++ b/templates/output.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>OUTPUT</title>
-    <link rel="stylesheet" href="../static/css/style_output.css" />
+    <link rel="stylesheet" href="/static/css/style_output.css" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
@@ -35,9 +35,7 @@
     <div
       class="max-w-full min-h-screen flex flex-row flex-wrap justify-around content-center flex-wrap"
     >
-      <div
-        class="md:w-5/12 my-28 flex flex-col justify-center items-center gap-10"
-      >
+      <div class="md:w-5/12 mb-28 mt-20 flex flex-col items-center gap-10">
         <div class="pie">
           <canvas id="myPieChart" width="600" height="400"></canvas>
 
