--- a/templates/major.html
+++ b/templates/major.html
@@ -2,13 +2,13 @@
 
 {% block content %}
         <header>
-            <a href="./" class="logo">SEAREQ</a>
+            <a href="/" class="logo">SEAREQ</a>
     
             <nav class="navbar">
                 <div class="menus">
                     <a href="major">Major</a>
-                    <a href="about">About</a>
-                    <a href="faq">FAQ</a>
+                    <a href="/about">About</a>
+                    <a href="/faq">FAQ</a>
                 </div>
     
                 <div class="icon">
@@ -29,54 +29,43 @@
                             <h2>Sains dan Teknologi</h2>
                         <div class="listmajor">
                             <ul class="major">
+                                <a href="/history/major/find?q=information+systems"><li>information system</li></a>
+                                <a href="output"><li>information management</li>
+                                <a href="output"><li>information system management</li>
+                                <a href="output"><li>information system</li></a>
+                                <a href="output"><li>information management</li>
+                                <a href="output"><li>information system management</li>
                                 <a href="output"><li>information system</li></a>
                                 <a href="output"><li>information management</li>
                                 <a href="output"><li>information system management</li>
                                 <a href="output"><li>information system</li></a>
                                 <a href="output"><li>information management</li>
                                 <a href="output"><li>information system management</li>
-                            </ul>
-                            <ul class="major">
                                 <a href="output"><li>information system</li></a>
                                 <a href="output"><li>information management</li>
                                 <a href="output"><li>information system management</li>
                                 <a href="output"><li>information system</li></a>
                                 <a href="output"><li>information management</li>
                                 <a href="output"><li>information system management</li>
-                            </ul>
-                            <ul class="major">
-                                <a href="output"><li>information system</li></a>
-                                <a href="output"><li>information management</li>
-                                <a href="output"><li>information system management</li>
-                                <a href="output"><li>information system</li></a>
-                                <a href="output"><li>information management</li>
-                                <a href="output"><li>information system management</li>
-                            </ul>
-                            <ul class="major">
                                 <a href="output"><li>information system</li></a>
                                 <a href="output"><li>information management</li>
                                 <a href="output"> <li>information system management</li>
                                 <a href="output"><li>information system</li></a>
                                 <a href="output"><li>information management</li>
                                 <a href="output"><li>information system management</li>
-                            </ul>
-                            <ul class="major">
                                 <a href="output"><li>information system</li></a>
                                 <a href="output"><li>information management</li>
                                 <a href="output"><li>information system management</li>
                                 <a href="output"><li>information system</li></a>
                                 <a href="output"><li>information management</li>
                                 <a href="output"><li>information system management</li>
-                            </ul>
-                            <ul class="major">
+                            
                                 <a href="output"><li>information system</li></a>
                                 <a href="output"><li>information management</li>
                                 <a href="output"> <li>information system management</li>
                                 <a href="output"><li>information system</li></a>
                                 <a href="output"><li>information management</li>
                                 <a href="output"><li>information system management</li>
-                            </ul>
-                            <ul class="major">
                                 <a href="output"><li>information system</li></a>
                                 <a href="output"><li>information management</li>
                                 <a href="output"><li>information system management</li>
