--- a/templates/output.html
+++ b/templates/output.html
@@ -15,13 +15,13 @@
 
   <body>
     <header>
-      <a href="./" class="logo">SEAREQ</a>
+      <a href="/" class="logo">SEAREQ</a>
 
       <nav class="navbar">
         <div class="menus">
-          <a href="major">Major</a>
-          <a href="about">About</a>
-          <a href="faq">FAQ</a>
+          <a href="/history/major">Major</a>
+          <a href="/about">About</a>
+          <a href="/faq">FAQ</a>
         </div>
 
         <div class="icon">
