update models for major

--- a/templates/major.html
+++ b/templates/major.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="part2">
                     <div class="box2">
-                            <h2>Sains dan Teknologi</h2>
+                        <h2>Arts and Humanities</h2>
                         <div class="listmajor">
                             <ul class="major">
                                 <a href="/history/major/find?q=information+systems"><li>information system</li></a>
@@ -35,113 +35,59 @@
                                 <a href="output"><li>information system</li></a>
                                 <a href="output"><li>information management</li>
                                 <a href="output"><li>information system management</li>
-                                <a href="output"><li>information system</li></a>
-                                <a href="output"><li>information management</li>
-                                <a href="output"><li>information system management</li>
-                                <a href="output"><li>information system</li></a>
-                                <a href="output"><li>information management</li>
-                                <a href="output"><li>information system management</li>
-                                <a href="output"><li>information system</li></a>
-                                <a href="output"><li>information management</li>
-                                <a href="output"><li>information system management</li>
-                                <a href="output"><li>information system</li></a>
-                                <a href="output"><li>information management</li>
-                                <a href="output"><li>information system management</li>
-                                <a href="output"><li>information system</li></a>
-                                <a href="output"><li>information management</li>
-                                <a href="output"> <li>information system management</li>
-                                <a href="output"><li>information system</li></a>
-                                <a href="output"><li>information management</li>
-                                <a href="output"><li>information system management</li>
-                                <a href="output"><li>information system</li></a>
-                                <a href="output"><li>information management</li>
-                                <a href="output"><li>information system management</li>
-                                <a href="output"><li>information system</li></a>
-                                <a href="output"><li>information management</li>
-                                <a href="output"><li>information system management</li>
-                            
-                                <a href="output"><li>information system</li></a>
-                                <a href="output"><li>information management</li>
-                                <a href="output"> <li>information system management</li>
-                                <a href="output"><li>information system</li></a>
-                                <a href="output"><li>information management</li>
-                                <a href="output"><li>information system management</li>
-                                <a href="output"><li>information system</li></a>
-                                <a href="output"><li>information management</li>
-                                <a href="output"><li>information system management</li>
-                                <a href="output"><li>information system</li></a>
-                                <a href="output"><li>information management</li>
-                                <a href="output"><li>information system management</li>
                             </ul>
-                            
                         </div>
                     </div>
                 </div>
                 
                 <div class="part2">
                     <div class="box2">
-                            <h2>Sosial Humaniora</h2>
+                        <h2>Engineering and Technology</h2>
                         <div class="listmajor">
                             <ul class="major">
-                                <a href="output"><li>ilmu Hukum</li></a>
-                                <li>ilmu Komunikasi</li>
-                                <li>Hubungan Internasional</li>
-                                <a href="output"><li>akutansi</li></a>
-                                <li>antropologi</li>
-                                <li>Ilmu Politik</li>
+                                <a href="/history/major/find?q=information+systems"><li>information system</li></a>
+                                <a href="output"><li>information management</li>
+                                <a href="output"><li>information system management</li>
+                                <a href="output"><li>information system</li></a>
+                                <a href="output"><li>information management</li>
+                                <a href="output"><li>information system management</li>
                             </ul>
-                            <ul class="major">
-                                <a href="output"><li>ilmu Hukum</li></a>
-                                <li>ilmu Komunikasi</li>
-                                <li>Hubungan Internasional</li>
-                                <a href="output"><li>akutansi</li></a>
-                                <li>antropologi</li>
-                                <li>Ilmu Politik</li>
-                            </ul>
-                            <ul class="major">
-                                <a href="output"><li>ilmu Hukum</li></a>
-                                <li>ilmu Komunikasi</li>
-                                <li>Hubungan Internasional</li>
-                                <a href="output"><li>akutansi</li></a>
-                                <li>antropologi</li>
-                                <li>Ilmu Politik</li>
-                            </ul>
-                            <ul class="major">
-                                <a href="output"><li>ilmu Hukum</li></a>
-                                <li>ilmu Komunikasi</li>
-                                <li>Hubungan Internasional</li>
-                                <a href="output"><li>akutansi</li></a>
-                                <li>antropologi</li>
-                                <li>Ilmu Politik</li>
-                            </ul>
-                            <ul class="major">
-                                <a href="output"><li>ilmu Hukum</li></a>
-                                <li>ilmu Komunikasi</li>
-                                <li>Hubungan Internasional</li>
-                                <a href="output"><li>akutansi</li></a>
-                                <li>antropologi</li>
-                                <li>Ilmu Politik</li>
-                            </ul>
-                            <ul class="major">
-                                <a href="output"><li>ilmu Hukum</li></a>
-                                <li>ilmu Komunikasi</li>
-                                <li>Hubungan Internasional</li>
-                                <a href="output"><li>akutansi</li></a>
-                                <li>antropologi</li>
-                                <li>Ilmu Politik</li>
-                            </ul>
-                            <ul class="major">
-                                <a href="output"><li>ilmu Hukum</li></a>
-                                <li>ilmu Komunikasi</li>
-                                <li>Hubungan Internasional</li>
-                                <a href="output"><li>akutansi</li></a>
-                                <li>antropologi</li>
-                                <li>Ilmu Politik</li>
-                            </ul>
-
                         </div>
                     </div>
                 </div>
+
+                <div class="part2">
+                    <div class="box2">
+                        <h2>Life Sciences and Medicine</h2>
+                        <div class="listmajor">
+                            <ul class="major">
+                                <a href="/history/major/find?q=information+systems"><li>information system</li></a>
+                                <a href="output"><li>information management</li>
+                                <a href="output"><li>information system management</li>
+                                <a href="output"><li>information system</li></a>
+                                <a href="output"><li>information management</li>
+                                <a href="output"><li>information system management</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="part2">
+                    <div class="box2">
+                        <h2>Natural Sciences</h2>
+                        <div class="listmajor">
+                            <ul class="major">
+                                <a href="/history/major/find?q=information+systems"><li>information system</li></a>
+                                <a href="output"><li>information management</li>
+                                <a href="output"><li>information system management</li>
+                                <a href="output"><li>information system</li></a>
+                                <a href="output"><li>information management</li>
+                                <a href="output"><li>information system management</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                
             </div>
         </div>
 
